# CS327

./: #times.c#  CMakeLists.txt  Turnin.sh  times.c  times.c~
Assignment0/: CHANGELOG  Makefile  README  sobel.c
Assignment1/: #dungeon.c#  .#dungeon.c  CHANGELOG  dungeon  dungeon.c
Assignment10/: .gitignore  CHANGELOG  Makefile  README  README.md  local.properties  shared-components.h
Assignment10/app/: build.gradle
Assignment10/app/src/main/: AndroidManifest.xml
Assignment10/app/src/main/cpp/: CMakeLists.txt  generate-dungeon.cpp  hello-jni.c  hello-jni.cpp  main.cpp  shared-components.cpp  shared-components.h
Assignment10/app/src/main/cpp/characters/: Character.cpp  Character.h  Monster.cpp  Monster.h  Object.cpp  Player.cpp
Assignment10/app/src/main/cpp/descriptions/: itemDescription.cpp  itemDescriptionFile.cpp  itemDescriptionFile.h  item_desc.txt  monsterDescription.cpp  monsterDescriptionFile.cpp  monsterDescriptionFile.h  monster_desc.txt
Assignment10/app/src/main/java/com/example/hellojni/: HelloJni.java
Assignment10/app/src/main/res/layout/: activity_hello_jni.xml
Assignment10/app/src/main/res/values/: strings.xml
Assignment10/characters/: Character.h  Player.h
Assignment10/cpp/: dungeon.cpp
Assignment10/cpp/characters/: Character.cpp  Object.cpp  Object.h
Assignment10/cpp/descriptions/: dice.h  itemDescription.cpp  monsterDescription.cpp
Assignment10/cpp/distance/: distance.cpp  distance.h  pathFindingHeap.cpp  pathFindingHeap.h
Assignment10/gradle/wrapper/: gradle-wrapper.properties
Assignment10/manifests/: AndroidManifest.xml
Assignment2/: CHANGELOG  README  dungeon  dungeon.c
Assignment3/: CHANGELOG  Makefile  README  dijkstra.c  dungeon  dungeon.c  generate-dungeon.c  heap.c  heap.h  load-and-save-dungeon.c  load-dungeon.c  save-dungeon.c  shared-components.c
Assignment4/: CHANGELOG  Makefile  README  dijkstra.h  dungeon  dungeon.c  generate-dungeon.c  generate-dungeon.h  heap.c  heap.h  monster.c  monster.h  shared-components.c  shared-components.h
Assignment4/characters/: characterHeap.c  characterHeap.h  monster.c  monster.h
Assignment4/distance/: distance.c  distance.h  pathFindingHeap.c  pathFindingHeap.h
Assignment5/: CHANGELOG  Makefile  README  dungeon  dungeon.c  generate-dungeon.c  shared-components.c
Assignment5/characters/: characterHeap.c  characterHeap.h  monster.c  monster.h
Assignment5/distance/: pathFindingHeap.h
Assignment6/: CHANGELOG  Makefile  README  dungeon  dungeon.c  dungeon.cpp  generate-dungeon.c  generate-dungeon.cpp  shared-components.c  shared-components.cpp  shared-components.h
Assignment6/characters/: Character.cpp  Character.h  characterHeap.cpp  characterHeap.h  monster.cpp
Assignment6/distance/: distance.c  pathFindingHeap.c
Assignment7/: CHANGELOG  Makefile  dungeon  dungeon.cpp
Assignment7/descriptions/: dice.cpp  dice.h  itemDescription.h  monsterDescription.cpp  monsterDescription.h
Assignment8/: CHANGELOG  Makefile  README  dungeon  dungeon.cpp  generate-dungeon.cpp  generate-dungeon.h  shared-components.cpp  shared-components.h
Assignment8/characters/: Character.cpp  Character.h  Monster.cpp  Monster.h  Object.cpp  Object.h
Assignment8/descriptions/: dice.h  itemDescription.cpp  itemDescription.h  monsterDescription.cpp
Assignment9/: CHANGELOG  Makefile  dungeon  dungeon.cpp  shared-components.cpp  shared-components.h
Assignment9/characters/: Character.cpp  Character.h  Monster.cpp  Monster.h  Object.cpp  Object.h  Player.cpp  Player.h
Assignment9/descriptions/: dice.cpp  itemDescription.cpp  object_desc.txt
ClassNotes/: a.out  febFifteen.c  midterm-ec.c
Cplusplus/app/: build.gradle
Cplusplus/app/src/androidTest/java/com/example/cplusplus/: ExampleInstrumentedTest.kt
Cplusplus/app/src/main/: AndroidManifest.xml
Cplusplus/app/src/main/cpp/com/example/cpluscplus/: NativeActivity.cpp
Cplusplus/app/src/main/res/values/: strings.xml
Cplusplus/app/src/test/java/com/example/cplusplus/: ExampleUnitTest.kt
Cplusplus/gradle/wrapper/: gradle-wrapper.properties
MyApplication/app/: build.gradle
MyApplication/gradle/wrapper/: gradle-wrapper.properties
